--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
       rel="stylesheet"
       href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
     <!-- Page CSS -->
     <!-- Page -->
     <link rel="stylesheet" href="../assets/vendor/css/pages/page-auth.css" />
@@ -60,17 +60,11 @@
     />
     <script src="%PUBLIC_URL%/assets/vendor/js/helpers.js"></script>
     <script src="%PUBLIC_URL%/assets/js/config.js"></script>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+
   </head>
   <body>
     <div id="root"></div>
-
-    <script src="%PUBLIC_URL%/assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/libs/popper/popper.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/js/bootstrap.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="%PUBLIC_URL%/assets/vendor/js/menu.js"></script>
-    <script src="%PUBLIC_URL%/assets/js/main.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
